parser/cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 130 conflicts: 9 shift/reduce
State 145 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 classs: CLASS TYPEID '{' feature_list '}' ';'
    3       | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    4       | error ';'

    5 class_list: classs
    6           | class_list classs

    7 feature: OBJECTID ':' TYPEID ';'
    8        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
    9        | OBJECTID ':' TYPEID ASSIGN expression ';'

   10 feature_list: ε
   11             | feature
   12             | feature_list feature
   13             | feature error
   14             | error ';'

   15 formal: OBJECTID ':' TYPEID

   16 formal_list: ε
   17            | formal
   18            | formal_list ',' formal

   19 expression: OBJECTID
   20           | OBJECTID ASSIGN expression
   21           | expression '.' OBJECTID '(' dispatch_expression_list ')'
   22           | OBJECTID '(' dispatch_expression_list ')'
   23           | expression '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   24           | IF expression THEN expression ELSE expression FI
   25           | WHILE expression LOOP expression POOL
   26           | '{' expression_list '}'
   27           | LET let_expression
   28           | CASE expression OF case_list ESAC
   29           | NEW TYPEID
   30           | ISVOID expression
   31           | expression '+' expression
   32           | expression '-' expression
   33           | expression '*' expression
   34           | expression '/' expression
   35           | '~' expression
   36           | expression '<' expression
   37           | expression LE expression
   38           | expression '=' expression
   39           | NOT expression
   40           | '(' expression ')'
   41           | INT_CONST
   42           | STR_CONST
   43           | BOOL_CONST

   44 expression_list: expression ';'
   45                | expression_list expression ';'
   46                | error ';'

   47 dispatch_expression_list: ε
   48                         | expression
   49                         | dispatch_expression_list ',' expression

   50 let_expression: OBJECTID ':' TYPEID IN expression
   51               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   52               | OBJECTID ':' TYPEID ',' let_expression
   53               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   54               | OBJECTID ':' TYPEID ASSIGN error ',' let_expression
   55               | error ','

   56 case: OBJECTID ':' TYPEID DARROW expression ';'

   57 case_list: ε
   58          | case
   59          | case_list case


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 21 22 23 40
    ')' (41) 8 21 22 23 40
    '*' (42) 33
    '+' (43) 31
    ',' (44) 18 49 52 53 54 55
    '-' (45) 32
    '.' (46) 21 23
    '/' (47) 34
    ':' (58) 7 8 9 15 50 51 52 53 54 56
    ';' (59) 2 3 4 7 8 9 14 44 45 46 56
    '<' (60) 36
    '=' (61) 38
    '@' (64) 23
    '{' (123) 2 3 8 26
    '}' (125) 2 3 8 26
    '~' (126) 35
    error (256) 4 13 14 46 54 55
    CLASS (258) 2 3
    ELSE (259) 24
    FI (260) 24
    IF (261) 24
    IN (262) 50 51
    INHERITS (263) 3
    LET (264) 27
    LOOP (265) 25
    POOL (266) 25
    THEN (267) 24
    WHILE (268) 25
    CASE (269) 28
    ESAC (270) 28
    OF (271) 28
    DARROW (272) 56
    NEW (273) 29
    ISVOID (274) 30
    STR_CONST <symbol> (275) 42
    INT_CONST <symbol> (276) 41
    BOOL_CONST <boolean> (277) 43
    TYPEID <symbol> (278) 2 3 7 8 9 15 23 29 50 51 52 53 54 56
    OBJECTID <symbol> (279) 7 8 9 15 19 20 21 22 23 50 51 52 53 54 56
    ASSIGN (280) 9 20 51 53 54
    NOT (281) 39
    LE (282) 37
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    classs <class_> (47)
        on left: 2 3 4
        on right: 5 6
    class_list <classes> (48)
        on left: 5 6
        on right: 1 6
    feature <feature> (49)
        on left: 7 8 9
        on right: 11 12 13
    feature_list <features> (50)
        on left: 10 11 12 13 14
        on right: 2 3 12
    formal <formal> (51)
        on left: 15
        on right: 17 18
    formal_list <formals> (52)
        on left: 16 17 18
        on right: 8 18
    expression <expression> (53)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 8 9 20 21 23 24 25 28 30 31 32 33 34 35 36 37 38 39 40 44 45 48 49 50 51 53 56
    expression_list <expressions> (54)
        on left: 44 45 46
        on right: 26 45
    dispatch_expression_list <expressions> (55)
        on left: 47 48 49
        on right: 21 22 23 49
    let_expression <expression> (56)
        on left: 50 51 52 53 54 55
        on right: 27 52 53 54
    case <case_> (57)
        on left: 56
        on right: 58 59
    case_list <cases> (58)
        on left: 57 58 59
        on right: 28 59


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    classs      go to state 4
    class_list  go to state 5


State 1

    4 classs: error • ';'

    ';'  shift, and go to state 6


State 2

    2 classs: CLASS • TYPEID '{' feature_list '}' ';'
    3       | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    5 class_list: classs •

    $default  reduce using rule 5 (class_list)


State 5

    1 program: class_list •
    6 class_list: class_list • classs

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    classs  go to state 9


State 6

    4 classs: error ';' •

    $default  reduce using rule 4 (classs)


State 7

    2 classs: CLASS TYPEID • '{' feature_list '}' ';'
    3       | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end •

    $default  accept


State 9

    6 class_list: class_list classs •

    $default  reduce using rule 6 (class_list)


State 10

    3 classs: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    2 classs: CLASS TYPEID '{' • feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 10 (feature_list)]
    '}'       reduce using rule 10 (feature_list)

    feature       go to state 15
    feature_list  go to state 16


State 12

    3 classs: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 17


State 13

   14 feature_list: error • ';'

    ';'  shift, and go to state 18


State 14

    7 feature: OBJECTID • ':' TYPEID ';'
    8        | OBJECTID • '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
    9        | OBJECTID • ':' TYPEID ASSIGN expression ';'

    ':'  shift, and go to state 19
    '('  shift, and go to state 20


State 15

   11 feature_list: feature •
   13             | feature • error

    error  shift, and go to state 21

    OBJECTID  reduce using rule 11 (feature_list)
    '}'       reduce using rule 11 (feature_list)


State 16

    2 classs: CLASS TYPEID '{' feature_list • '}' ';'
   12 feature_list: feature_list • feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 22

    feature  go to state 23


State 17

    3 classs: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 10 (feature_list)]
    '}'       reduce using rule 10 (feature_list)

    feature       go to state 15
    feature_list  go to state 24


State 18

   14 feature_list: error ';' •

    $default  reduce using rule 14 (feature_list)


State 19

    7 feature: OBJECTID ':' • TYPEID ';'
    9        | OBJECTID ':' • TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 25


State 20

    8 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 16 (formal_list)

    formal       go to state 27
    formal_list  go to state 28


State 21

   13 feature_list: feature error •

    $default  reduce using rule 13 (feature_list)


State 22

    2 classs: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 29


State 23

   12 feature_list: feature_list feature •

    $default  reduce using rule 12 (feature_list)


State 24

    3 classs: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
   12 feature_list: feature_list • feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 30

    feature  go to state 23


State 25

    7 feature: OBJECTID ':' TYPEID • ';'
    9        | OBJECTID ':' TYPEID • ASSIGN expression ';'

    ASSIGN  shift, and go to state 31
    ';'     shift, and go to state 32


State 26

   15 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 33


State 27

   17 formal_list: formal •

    $default  reduce using rule 17 (formal_list)


State 28

    8 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expression '}' ';'
   18 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 29

    2 classs: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 2 (classs)


State 30

    3 classs: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 36


State 31

    9 feature: OBJECTID ':' TYPEID ASSIGN • expression ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 51


State 32

    7 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 7 (feature)


State 33

   15 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 52


State 34

    8 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 53


State 35

   18 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 26

    formal  go to state 54


State 36

    3 classs: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 3 (classs)


State 37

   24 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 55


State 38

   27 expression: LET • let_expression

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_expression  go to state 58


State 39

   25 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 59


State 40

   28 expression: CASE • expression OF case_list ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 60


State 41

   29 expression: NEW • TYPEID

    TYPEID  shift, and go to state 61


State 42

   30 expression: ISVOID • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 62


State 43

   42 expression: STR_CONST •

    $default  reduce using rule 42 (expression)


State 44

   41 expression: INT_CONST •

    $default  reduce using rule 41 (expression)


State 45

   43 expression: BOOL_CONST •

    $default  reduce using rule 43 (expression)


State 46

   19 expression: OBJECTID •
   20           | OBJECTID • ASSIGN expression
   22           | OBJECTID • '(' dispatch_expression_list ')'

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 19 (expression)


State 47

   39 expression: NOT • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 65


State 48

   35 expression: '~' • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 66


State 49

   26 expression: '{' • expression_list '}'

    error       shift, and go to state 67
    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression       go to state 68
    expression_list  go to state 69


State 50

   40 expression: '(' • expression ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 70


State 51

    9 feature: OBJECTID ':' TYPEID ASSIGN expression • ';'
   21 expression: expression • '.' OBJECTID '(' dispatch_expression_list ')'
   23           | expression • '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   31           | expression • '+' expression
   32           | expression • '-' expression
   33           | expression • '*' expression
   34           | expression • '/' expression
   36           | expression • '<' expression
   37           | expression • LE expression
   38           | expression • '=' expression

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ';'  shift, and go to state 80


State 52

   15 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 15 (formal)


State 53

    8 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 81


State 54

   18 formal_list: formal_list ',' formal •

    $default  reduce using rule 18 (formal_list)


State 55

   21 expression: expression • '.' OBJECTID '(' dispatch_expression_list ')'
   23           | expression • '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   24           | IF expression • THEN expression ELSE expression FI
   31           | expression • '+' expression
   32           | expression • '-' expression
   33           | expression • '*' expression
   34           | expression • '/' expression
   36           | expression • '<' expression
   37           | expression • LE expression
   38           | expression • '=' expression

    THEN  shift, and go to state 82
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 56

   55 let_expression: error • ','

    ','  shift, and go to state 83


State 57

   50 let_expression: OBJECTID • ':' TYPEID IN expression
   51               | OBJECTID • ':' TYPEID ASSIGN expression IN expression
   52               | OBJECTID • ':' TYPEID ',' let_expression
   53               | OBJECTID • ':' TYPEID ASSIGN expression ',' let_expression
   54               | OBJECTID • ':' TYPEID ASSIGN error ',' let_expression

    ':'  shift, and go to state 84


State 58

   27 expression: LET let_expression •

    $default  reduce using rule 27 (expression)


State 59

   21 expression: expression • '.' OBJECTID '(' dispatch_expression_list ')'
   23           | expression • '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   25           | WHILE expression • LOOP expression POOL
   31           | expression • '+' expression
   32           | expression • '-' expression
   33           | expression • '*' expression
   34           | expression • '/' expression
   36           | expression • '<' expression
   37           | expression • LE expression
   38           | expression • '=' expression

    LOOP  shift, and go to state 85
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 60

   21 expression: expression • '.' OBJECTID '(' dispatch_expression_list ')'
   23           | expression • '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   28           | CASE expression • OF case_list ESAC
   31           | expression • '+' expression
   32           | expression • '-' expression
   33           | expression • '*' expression
   34           | expression • '/' expression
   36           | expression • '<' expression
   37           | expression • LE expression
   38           | expression • '=' expression

    OF   shift, and go to state 86
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


State 61

   29 expression: NEW TYPEID •

    $default  reduce using rule 29 (expression)


State 62

   21 expression: expression • '.' OBJECTID '(' dispatch_expression_list ')'
   23           | expression • '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   30           | ISVOID expression •
   31           | expression • '+' expression
   32           | expression • '-' expression
   33           | expression • '*' expression
   34           | expression • '/' expression
   36           | expression • '<' expression
   37           | expression • LE expression
   38           | expression • '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 30 (expression)


State 63

   20 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 87


State 64

   22 expression: OBJECTID '(' • dispatch_expression_list ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    $default  reduce using rule 47 (dispatch_expression_list)

    expression                go to state 88
    dispatch_expression_list  go to state 89


State 65

   21 expression: expression • '.' OBJECTID '(' dispatch_expression_list ')'
   23           | expression • '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   31           | expression • '+' expression
   32           | expression • '-' expression
   33           | expression • '*' expression
   34           | expression • '/' expression
   36           | expression • '<' expression
   37           | expression • LE expression
   38           | expression • '=' expression
   39           | NOT expression •

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 39 (expression)


State 66

   21 expression: expression • '.' OBJECTID '(' dispatch_expression_list ')'
   23           | expression • '@' TYPEID '.' OBJECTID '(' dispatch_expression_list ')'
   31           | expression • '+' expression
   32           | expression • '-' expression
   33           | expression • '*' expression
   34           | expression • '/' expression
   35           | '~' expression •
   36           | expression • '<' expression
   37           | expression • LE expression
   38           | expression • '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 35 (expression)


State 67

   46 expression_list: error • ';'

    ';'  shift, and go to state 90


State 68
